--- a/index.html
+++ b/index.html
@@ -1,10 +1,19 @@
 <!DOCTYPE html>
+<!--Practicing basic HTML elements-->
+<!--Decided to stay within HTML-Boilerplate to practice staged and commit git commands-->
 <html>
     <head>
         <title>My First Webpage</title>
         <meta charset="UTF-8">
     </head>
     <body>
-        <h1>Hello World!</h1>
+        <h1>H1 Heading</h1>
+        <h2>H2 Heading</h2>
+          <p><strong>This is my first paragraph.</strong> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Dis parturient montes nascetur ridiculus mus mauris. At augue eget arcu dictum varius duis at. Arcu cursus euismod quis viverra<p>
+          <p><em>This is my second paragraph</em> Sed adipiscing diam donec adipiscing tristique. Viverra aliquet eget sit amet tellus cras adipiscing enim. Blandit cursus risus at ultrices mi tempus imperdiet nulla malesuada. Velit laoreet id donec ultrices. Orci ac auctor augue mauris augue neque gravida in. Curabitur vitae nunc sed velit dignissim sodales ut eu sem.</p>
+        <h3>H3 Heading</h3>
+        <h4>H4 Heading</h4>
+        <h5>H5 Heading</h5>
+        <h6>H6 Heading</h6>
     </body>
 </html>
